--- a/ga_kaggle.ipynb
+++ b/ga_kaggle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,25 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import recall_score, confusion_matrix, precision_score, f1_score, classification_report, roc_auc_score\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# My keras tool-kit :D\n",
+    "from keras.wrappers.scikit_learn import KerasClassifier\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from keras.models import Sequential # initialize neural network library\n",
+    "from keras.layers import Dense # build our layers library\n",
+    "import tensorflow as tf\n",
+    "from keras.layers import Activation\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Conv2D\n",
+    "from tensorflow.keras.layers import MaxPool2D\n",
+    "from tensorflow.keras.layers import Flatten\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.layers import Dropout\n",
+    "from keras import callbacks\n",
+    "from tensorflow.keras.optimizers import Adam, SGD, RMSprop, Adamax\n",
+    "import random\n",
+    "import mplcyberpunk"
    ]
   }
  ],
